<resources>
    <string name="app_name">GongmoSample</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title1">ITemFragment</string>

    <!-- ExpandingListView 예제용 -->
    <string name="short_lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit</string>
    <string name="medium_lorem_ipsum">"Pellentesque dictum sit amet sapien in faucibus. Curabitur fermentum, nulla quis placerat imperdiet, est nisi placerat arcu, non ornare erat justo at enim. Nam vitae porttitor sem. Quisque non quam nisi. Proin quis urna id elit ultrices cursus non tempus dolor"</string>
    <string name="long_lorem_ipsum">"Mauris dapibus convallis massa, vitae ultrices est ultricies ut. Nam porttitor et metus ac bibendum. Nam at justo vitae felis lacinia ultrices laoreet ut arcu. Nam ac purus et turpis convallis mollis. Integer lorem eros, hendrerit imperdiet interdum vitae, sagittis eget ipsum. Donec dignissim tortor at felis fringilla, sed dignissim diam vulputate. Nam sit amet facilisis massa. Suspendisse posuere quam quis augue dapibus venenatis."</string>


    <!-- TODO: 네비게이션 드로워 메뉴 순서대로 작성, ViewPager 순서와 맞춤 -->
    <string name="nav_menu_title_1">리스트</string>
    <string name="nav_menu_title_2">JSON 파싱</string>
    <string name="nav_menu_title_3">사진 동적 로딩</string>
    <string name="nav_menu_title_4">ExpandingListView</string>
    <string name="nav_menu_title_5">Volley</string>

    <string-array name="nav_menu_array">
        <item>@string/nav_menu_title_1</item>
        <item>@string/nav_menu_title_2</item>
        <item>@string/nav_menu_title_3</item>
        <item>@string/nav_menu_title_4</item>
        <item>@string/nav_menu_title_5</item>
    </string-array>
</resources>
